07-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kitten-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /cats
        backend:
          serviceName: kittens-service
          servicePort: http
      - path: /dogs
        backend:
          serviceName: dogs-service
          servicePort: http
      - path: /random
        backend:
          serviceName: random-service
          servicePort: http
